<resources>
    <string name="app_name">Tetris</string>
    <string name="high_score_default">High score: 0</string>
    <string name="new_game">New game</string>
    <string name="reset_score">Reset score</string>
    <string name="exit">Exit</string>
    <string name="currentscore">Current Score</string>
    <string name="high_score">High score:</string>
    <string name="btn_restart">Restart</string>

</resources>